# phi-complexity

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE_PHIDELIA_PIPELINE.md  LICENSE  MANIFESTE_SECURITE_PHI.md  Makefile  README.md  ROADMAP.md  SECURITY.md  engine.py  mkdocs.yml  phi_check.py  pyproject.toml  tmp_pr131_diff.txt  tmp_pr131_diff_utf8.txt
.devcontainer/: devcontainer.json
.github/: AGENT_GUIDELINES.md  CODEOWNERS  FUNDING.yml  copilot-instructions.md  pull_request_template.md
docs/: ASSEMBLY.md  BOUCLE_ZERO.md  DEVELOPER.md  GUIDE.md  MATHEMATIQUES.md  guide_archive.md  index.md  installation.md  kernel-souverain.md  licence.md  roadmap.md  usage.md
examples/: code_chaotique.py  code_harmonieux.py  demo.py  logic_rs.rs  moteur_c.c
notebooks/: 01_quasicristaux_penrose.ipynb  02_riemann_zeta.ipynb  03_schrodinger_incertitude.ipynb  04_sentinel_cybersec.ipynb  05_harvest_ml.ipynb  06_spirale_doree_fractale.ipynb  07_matrice_holographique.ipynb  08_diagnostic_cybersecurite.ipynb  09_zero_quasicristaux_ia.ipynb
phi_complexity/: __init__.py  __main__.py  agents_registry.json  akasha.py  analyseur.py  audit_slo.py  autosuture.py  backup.py  bmad.py  canvas.py  cli.py  commit_risk.py  consensus.py  core.py  coverage_reporting.py  fingerprint.py  gnose.py  harvest.py  impossible.py  log_parser.py  metadata_ops.py  metriques.py  notebook_helpers.py  oracle.py  rapport.py  remediation.py  search.py  securite.py  suture.py  vault.py
tests/: test_akasha.py  test_analyseur.py  test_asm_backend.py  test_audit_slo.py  test_autosuture.py  test_backends.py  test_backup.py  test_bmad.py  test_branches.py  test_canvas.py  test_cli.py  test_cli_feedback.py  test_commit_risk.py  test_consensus.py  test_core.py  test_coverage_reporting.py  test_elf_backend.py  test_engine.py  test_fingerprint.py  test_gnose.py  test_harvest.py  test_impossible.py  test_log_parser.py  test_main.py  (+16 more)
(+39 files in other folders)
